Do not set z-index to prevent children being stuck in stacking context

--- a/rundeckapp/grails-spa/packages/ui-trellis/theme-next/scss/paper/_view.scss
+++ b/rundeckapp/grails-spa/packages/ui-trellis/theme-next/scss/paper/_view.scss
@@ -19,7 +19,6 @@
 
 #section-header {
     overflow: visible;
-    z-index: 1000;
 }
 
 #section-navbar {
